--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.7",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
