--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.1.7",
     "axios": "^1.2.2",
+    "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
